0.6.0 - TBD (+ means planned change)

+ Added support for localization/internationalization
+ Added a navigation minimap
+ Fixed memory problems when loading several maps with many tilesets in a row

0.5.2 - TBD (+ means planned change)

+ Added more useful visual feedback for some brushes
+ Added the Shifted view, which emulates several tiling configurations
+ Added "stamp" tool
* For pencil, right-click, drag now creates a stamp for easy copying
+ Added ability to select multiple layers from layer table
+ Added the ability to merge tile images when layers are merged
* Added support for animated tiles
* Added more error-checking to XMLMapTransformer, the default map reader
+ Added "global properties" for tilesets (properties set for all tiles)
* Added support for "tile cutters"
+ Added preview of new tileset when creating a tileset
* Fixed a bug when exporting a tileset with an external image
* Fixed two cases of hanging when using the fill tool
+ Fixed tile palette bug of displaying multiple tilesets over eachother
* Fixed tile palette bug of not accounting for gaps in tile ids (old bug)
* Fixed bug of adding a new tile even if cancelling out of new tile dialog

0.5.1 - June 15th, 2005

* Added a checkerboard background to tileset palette
* Added support for layer locking (not editable when locked)
* Added support for tmx.gz map files
* Added selection addition and substraction via Shift and Ctrl respectively
* Improved the drawing speed thanks to some thorough testing and suggestions
  (Jerome Blouin)
* Improved transformation so that it respects selections
* Fixed the "Save As Image" feature to use current zoom level
* Fixed drawing on invisible layers
* Fixed selection rectangle to include one more tile
* Fixed loading of plugins that only do export and no import
* Fixed removing tilesets in the Tileset Manager
* Fixed image loading to ensure hardware acceleration is used in Java 1.4 and
  above (Jerome Blouin)