@@ -1,5 +1,6 @@
 package tiled.mapeditor.util.cutter;
 
+import java.awt.Dimension;
 import java.awt.Image;
 
 public class BorderTileCutter implements TileCutter {
@@ -10,6 +11,11 @@ public class BorderTileCutter implements TileCutter {
 	}
 
 	public Image getNextTile() throws Exception {
+		// TODO Auto-generated method stub
+		return null;
+	}
+
+	public Dimension getDimensions() {
 		// TODO Auto-generated method stub
 		return null;
 	}
