@@ -1,8 +1,10 @@
 package tiled.mapeditor.util.cutter;
 
+import java.awt.Dimension;
 import java.awt.Image;
 
 public interface TileCutter {
 	public void setImage(Image image);
 	public Image getNextTile() throws Exception;
+	public Dimension getDimensions();
 }
